# halog

./: LICENSE  README.md  dpm  dpm.cfg  halog.cabal  stack.yaml
src/: Inputs.hs  Main.hs  Parser.hs  Process.hs  Types.hs
