name:                halog
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/halog#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable halog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.6.0
                     , containers >= 0.3 && <0.6
                     , directory >=1.2 && <1.3
                     , MissingH >= 1.3 && <1.4
                     , parsec == 3.1.9
                     , zlib == 0.5.4.2
  other-modules:       Inputs
                     , Parser
                     , Process
                     